Refactor: Migrate to Kotlin DSL, update dependencies, and configure build settings
- Converts build files to Kotlin DSL (`.kts`).
- Updates dependencies in `settings.gradle.kts` for Android, Kotlin, Hilt, and Navigation.
- Sets `repositoriesMode` to `PREFER_SETTINGS` in `settings.gradle.kts`.
- Adds Hilt classpath dependency to the root `build.gradle.kts`.
- Updates plugin applications in `app/build.gradle.kts`.
- Sets `namespace`, `compileSdk`, `minSdk`, `targetSdk`, `versionCode`, `versionName` and `testInstrumentationRunner` in `app/build.gradle.kts`.
- Enables `jniLibs.useLegacyPackaging` in `app/build.gradle.kts`.
- Configures compile options for Java 22 and JVM target for Kotlin 22 in `app/build.gradle.kts`.
- Adds `hilt-android`, `hilt-android-compiler` and `desugar` dependencies, removing the version specification from the `implementation` block.
- Adds `coreLibraryDesugaring` dependency.
- Updates the versions of the `compose`, `hilt` dependencies in `app/build.gradle.kts`.
- Removes unused `kotlin` and `java` blocks from the root `build.gradle.kts`.
- Removes `ksp` plugin from `app/build.gradle.kts` and the root `build.gradle.kts`
- Removes the `composeOptions` from `app/build.gradle.kts`
- Removes `isMinifyEnabled` from `app/build.gradle.kts`
- Removes `proguardFiles` from `app/build.gradle.kts`
- Removes the repository setup in the root `build.gradle.kts`
- Removed `buildFeatures` and `packaging` from `app/build.gradle.kts` and added them again, this time with the property `jniLibs.useLegacyPackaging = true`